<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/angemottagare"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etReciver"
        android:hint="@string/arbetsgivare"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/button4"
        android:layout_toStartOf="@+id/button4" />

    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"

        android:id="@+id/button4"
        android:layout_gravity="right"
        android:background="@mipmap/ic_add_contact"
        android:layout_below="@+id/textView"
        android:onClick="getContacts"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avsandare"
        android:id="@+id/textView2"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/etReciver"
        android:layout_alignLeft="@+id/etSender"
        android:layout_alignStart="@+id/etSender" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etSender"
        android:hint="@string/frivilligt"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>